--- a/archive.njk
+++ b/archive.njk
@@ -6,9 +6,9 @@ navtitle: Blog
 permalink: /posts/
 templateClass: template-archive
 ---
-<div class="border-t border-dotted pt-8 pb-4">
-  <div class="[ banner ] [ py-2 max-w-xl ml-auto mr-auto ]">
-    <h2 class="[ banner__headline ] [ font-bold font-sans leading-tight text-2xl md:text-3xl tracking-tight mt-0 mb-2 ]">
+<div class="pt-8 pb-8">
+  <div class="[ banner ] [ py-2 max-w-xl ]">
+    <h2 class="[ banner__headline ] [ font-normal font-sans leading-tight text-2xl md:text-3xl tracking-tight mt-0 mb-2 ]">
       Blog
     </h2>
     <p class="[ banner__strapline ] font-sans text-lg leading-snug text-sm">
