--- a/index.njk
+++ b/index.njk
@@ -3,7 +3,7 @@ layout: layouts/home.njk
 ---
 <div class="pt-8 pb-8">
   <div class="[ banner ] [ py-2 max-w-xl ]">
-    <h2 class="[ banner__headline ] [ font-normal font-sans leading-tight text-2xl md:text-3xl tracking-tight mt-0 mb-2 ]">
+    <h2 class="[ banner__headline ] [ font-bold font-serif leading-tight text-2xl md:text-3xl tracking-tight mt-0 mb-2 ]">
       Front-end Developer
     </h2>
     <p class="[ banner__strapline ] font-sans text-lg leading-snug text-sm">
