--- a/_includes/layouts/post.njk
+++ b/_includes/layouts/post.njk
@@ -3,13 +3,13 @@ layout: layouts/base.njk
 templateClass: template-post
 ---
 <article>
-  <header class="pt-8 pb-4">
-    <div class="[ banner ] [ py-2 max-w-xl ]">
-      <h2 class="[ banner__headline ] [ font-bold font-serif leading-tight text-2xl sm:text-2xl md:text-3xl tracking-tight mt-0 mb-2 ]">{{ title }}</h2>
+  <header class="pt-8 pb-4 mb-8">
+    <div class="[ banner ] [ py-2 max-w-xl m-auto ]">
+      <h2 class="[ banner__headline ] [ font-bold tracking-tight font-serif leading-tight text-2xl sm:text-2xl md:text-3xl tracking-tight mt-0 mb-2 ]">{{ title }}</h2>
       <time class="[ banner__strapline ] [ font-sans text-sm ]" datetime="{{ date | htmlDateString }}">{{ date | readableDate }}</time>
     </div>
   </header>
-  <div{% if templateClass %} class="[ typeset {{ templateClass }} ] [ pb-12 max-w-xl ]"{% endif %}>
+  <div{% if templateClass %} class="[ typeset {{ templateClass }} ] [ pb-12 max-w-xl m-auto ]"{% endif %}>
     {{ content | safe }}
   </div>
 </article>
