--- a/css/index.css
+++ b/css/index.css
@@ -1,5 +1,70 @@
+@import "../node_modules/@fortawesome/fontawesome-free/css/all.css";
+@import url('https://rsms.me/inter/inter.css');
 @tailwind base;
 @tailwind components;
+
+@font-face {
+  font-family: 'Font Awesome 5 Brands';
+  font-style: normal;
+  font-weight: normal;
+  font-display: auto;
+  src: url("../node_modules/@fortawesome/fontawesome-free/webfonts/fa-brands-400.eot");
+  src: url("../node_modules/@fortawesome/fontawesome-free/webfonts/fa-brands-400.eot?#iefix") format("embedded-opentype"), url("../node_modules/@fortawesome/fontawesome-free/webfonts/fa-brands-400.woff2") format("woff2"), url("../node_modules/@fortawesome/fontawesome-free/webfonts/fa-brands-400.woff") format("woff"), url("../node_modules/@fortawesome/fontawesome-free/webfonts/fa-brands-400.ttf") format("truetype"), url("../node_modules/@fortawesome/fontawesome-free/webfonts/fa-brands-400.svg#fontawesome") format("svg"); }
+
+.fab {
+  font-family: 'Font Awesome 5 Brands'; }
+@font-face {
+  font-family: 'Font Awesome 5 Free';
+  font-style: normal;
+  font-weight: 400;
+  font-display: auto;
+  src: url("../node_modules/@fortawesome/fontawesome-free/webfonts/fa-regular-400.eot");
+  src: url("../node_modules/@fortawesome/fontawesome-free/webfonts/fa-regular-400.eot?#iefix") format("embedded-opentype"), url("../node_modules/@fortawesome/fontawesome-free/webfonts/fa-regular-400.woff2") format("woff2"), url("../node_modules/@fortawesome/fontawesome-free/webfonts/fa-regular-400.woff") format("woff"), url("../node_modules/@fortawesome/fontawesome-free/webfonts/fa-regular-400.ttf") format("truetype"), url("../node_modules/@fortawesome/fontawesome-free/webfonts/fa-regular-400.svg#fontawesome") format("svg"); }
+
+.far {
+  font-family: 'Font Awesome 5 Free';
+  font-weight: 400; }
+@font-face {
+  font-family: 'Font Awesome 5 Free';
+  font-style: normal;
+  font-weight: 900;
+  font-display: auto;
+  src: url("../node_modules/@fortawesome/fontawesome-free/webfonts/fa-solid-900.eot");
+  src: url("../node_modules/@fortawesome/fontawesome-free/webfonts/fa-solid-900.eot?#iefix") format("embedded-opentype"), url("../node_modules/@fortawesome/fontawesome-free/webfonts/fa-solid-900.woff2") format("woff2"), url("../node_modules/@fortawesome/fontawesome-free/webfonts/fa-solid-900.woff") format("woff"), url("../node_modules/@fortawesome/fontawesome-free/webfonts/fa-solid-900.ttf") format("truetype"), url("../node_modules/@fortawesome/fontawesome-free/webfonts/fa-solid-900.svg#fontawesome") format("svg"); }
+
+
+html { font-family: 'Inter', sans-serif; }
+
+@supports (font-variation-settings: normal) {
+  html { font-family: 'Inter var', sans-serif; }
+}
+
+@font-face {
+  font-family: "IBM Plex Mono";
+  font-weight: 400;
+  font-style: normal;
+  src: url("../node_modules/@ibm/plex/IBM-Plex-Mono/fonts/complete/woff2/IBMPlexMono-Text.woff2") format("woff2"),
+       url("../node_modules/@ibm/plex/IBM-Plex-Mono/fonts/complete/woff/IBMPlexMono-Text.woff") format("woff"),
+       url("../node_modules/@ibm/plex/IBM-Plex-Mono/fonts/complete/eot/IBMPlexMono-Text.eot") format("eot");
+}
+
+@font-face {
+  font-family: "Pitch Sans";
+  font-weight: 600;
+  font-style: italic;
+  src: url("../fonts/PitchSansWeb-SemiboldItalic.woff2") format("woff2"),
+       url("../fonts/PitchSansWeb-SemiboldItalic.woff") format("woff"),
+       url("../fonts/PitchSansWeb-SemiboldItalic.eot") format("eot");
+}
+
+@font-face {
+  font-family: "Pitch Sans";
+  font-weight: 600;
+  font-style: italic;
+  src: url("../fonts/PitchSansWeb-SemiboldItalic.woff2") format("woff2"),
+       url("../fonts/PitchSansWeb-SemiboldItalic.woff") format("woff"),
+       url("../fonts/PitchSansWeb-SemiboldItalic.eot") format("eot");
+}
 
 @font-face {
   font-family: "Untitled Sans";
@@ -205,8 +270,8 @@ body {
 }
 
 body.dark {
-  @apply .bg-gray-10;
-  @apply .text-gray-1;
+  @apply .bg-nord0-dark;
+  @apply .text-nord4;
 }
 
 .typeset p {
@@ -272,9 +337,10 @@ body.dark {
 
 .typeset blockquote {
   @apply .border-l-4;
-  @apply .border-gray-2;
+  @apply .border-nord0;
   @apply .pl-4;
   @apply .py-1;
+  @apply .-ml-4;
 }
 
 .typeset blockquote + p,
@@ -288,11 +354,11 @@ body.dark {
 }
 
 .dark .typeset blockquote {
-  @apply .border-gray-8;
+  @apply .border-nord0;
 }
 
 .dark .typeset blockquote p {
-  
+
 }
 
 .typeset pre[class*="language-"] + blockquote {
@@ -300,17 +366,19 @@ body.dark {
 }
 
 .topo {
-  
-  /* border-top: 1px solid;
-  border-bottom: 1px solid; */
-  /* background-color: #f7fafc;
-  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='100' height='18' viewBox='0 0 100 18'%3E%3Cpath fill='%23e2e8f0' fill-opacity='1' d='M61.82 18c3.47-1.45 6.86-3.78 11.3-7.34C78 6.76 80.34 5.1 83.87 3.42 88.56 1.16 93.75 0 100 0v6.16C98.76 6.05 97.43 6 96 6c-9.59 0-14.23 2.23-23.13 9.34-1.28 1.03-2.39 1.9-3.4 2.66h-7.65zm-23.64 0H22.52c-1-.76-2.1-1.63-3.4-2.66C11.57 9.3 7.08 6.78 0 6.16V0c6.25 0 11.44 1.16 16.14 3.42 3.53 1.7 5.87 3.35 10.73 7.24 4.45 3.56 7.84 5.9 11.31 7.34zM61.82 0h7.66a39.57 39.57 0 0 1-7.34 4.58C57.44 6.84 52.25 8 46 8S34.56 6.84 29.86 4.58A39.57 39.57 0 0 1 22.52 0h15.66C41.65 1.44 45.21 2 50 2c4.8 0 8.35-.56 11.82-2z'%3E%3C/path%3E%3C/svg%3E"); */
+
+  border-top: 1px solid;
+  /* border-bottom: 1px solid; */
+  /*  background-color: #f7fafc; */
+  @apply .text-nord0;
+  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='100' height='18' viewBox='0 0 100 18'%3E%3Cpath fill='%23e2e8f0' fill-opacity='1' d='M61.82 18c3.47-1.45 6.86-3.78 11.3-7.34C78 6.76 80.34 5.1 83.87 3.42 88.56 1.16 93.75 0 100 0v6.16C98.76 6.05 97.43 6 96 6c-9.59 0-14.23 2.23-23.13 9.34-1.28 1.03-2.39 1.9-3.4 2.66h-7.65zm-23.64 0H22.52c-1-.76-2.1-1.63-3.4-2.66C11.57 9.3 7.08 6.78 0 6.16V0c6.25 0 11.44 1.16 16.14 3.42 3.53 1.7 5.87 3.35 10.73 7.24 4.45 3.56 7.84 5.9 11.31 7.34zM61.82 0h7.66a39.57 39.57 0 0 1-7.34 4.58C57.44 6.84 52.25 8 46 8S34.56 6.84 29.86 4.58A39.57 39.57 0 0 1 22.52 0h15.66C41.65 1.44 45.21 2 50 2c4.8 0 8.35-.56 11.82-2z'%3E%3C/path%3E%3C/svg%3E");
 }
 
-/* .dark .topo {
-  background-color: #1a202c;
-  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='100' height='18' viewBox='0 0 100 18'%3E%3Cpath fill='%232D3748' fill-opacity='1' d='M61.82 18c3.47-1.45 6.86-3.78 11.3-7.34C78 6.76 80.34 5.1 83.87 3.42 88.56 1.16 93.75 0 100 0v6.16C98.76 6.05 97.43 6 96 6c-9.59 0-14.23 2.23-23.13 9.34-1.28 1.03-2.39 1.9-3.4 2.66h-7.65zm-23.64 0H22.52c-1-.76-2.1-1.63-3.4-2.66C11.57 9.3 7.08 6.78 0 6.16V0c6.25 0 11.44 1.16 16.14 3.42 3.53 1.7 5.87 3.35 10.73 7.24 4.45 3.56 7.84 5.9 11.31 7.34zM61.82 0h7.66a39.57 39.57 0 0 1-7.34 4.58C57.44 6.84 52.25 8 46 8S34.56 6.84 29.86 4.58A39.57 39.57 0 0 1 22.52 0h15.66C41.65 1.44 45.21 2 50 2c4.8 0 8.35-.56 11.82-2z'%3E%3C/path%3E%3C/svg%3E");
-} */
+.dark .topo {
+  @apply .border-gray-6;
+  /*  background-color: #1a202c;
+  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='100' height='18' viewBox='0 0 100 18'%3E%3Cpath fill='%232D3748' fill-opacity='1' d='M61.82 18c3.47-1.45 6.86-3.78 11.3-7.34C78 6.76 80.34 5.1 83.87 3.42 88.56 1.16 93.75 0 100 0v6.16C98.76 6.05 97.43 6 96 6c-9.59 0-14.23 2.23-23.13 9.34-1.28 1.03-2.39 1.9-3.4 2.66h-7.65zm-23.64 0H22.52c-1-.76-2.1-1.63-3.4-2.66C11.57 9.3 7.08 6.78 0 6.16V0c6.25 0 11.44 1.16 16.14 3.42 3.53 1.7 5.87 3.35 10.73 7.24 4.45 3.56 7.84 5.9 11.31 7.34zM61.82 0h7.66a39.57 39.57 0 0 1-7.34 4.58C57.44 6.84 52.25 8 46 8S34.56 6.84 29.86 4.58A39.57 39.57 0 0 1 22.52 0h15.66C41.65 1.44 45.21 2 50 2c4.8 0 8.35-.56 11.82-2z'%3E%3C/path%3E%3C/svg%3E");*/
+}
 
 /* .banner {
   @apply .bg-gray-1;
@@ -321,11 +389,11 @@ body.dark {
 } */
 
 .banner__headline {
-  @apply .text-gray-10;
+  @apply .text-nord5;
 }
 
 .dark .banner__headline {
-  @apply .text-gray-0;
+  @apply .text-nord5;
 }
 
 .banner__strapline {
@@ -333,15 +401,15 @@ body.dark {
 }
 
 .dark .banner__strapline {
-  @apply .text-gray-3;
+  @apply .text-nord4;
 }
 
 .site-header__link {
-  @apply .text-gray-10;
+  @apply .text-nord3;
 }
 
 .dark .site-header__link {
-  @apply .text-gray-1;
+  @apply .text-nord4;
 }
 
 .site-header__button {
@@ -362,9 +430,10 @@ body.dark {
 
 .dark .postlist__link {
   @apply .border-gray-1;
+  @apply .leading-tight;
 }
 .dark .postlist__meta {
-  @apply .text-gray-3;
+  @apply .text-nord4;
 }
 
 /* article > header {
@@ -375,6 +444,41 @@ body.dark {
   @apply .border-gray-8;
 } */
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 /*
 Name: Duotone Sea
 Author: by Simurai, adapted from DuoTone themes by Simurai for Atom (http://simurai.com/projects/2016/01/01/duotone-themes)
@@ -382,174 +486,318 @@ Conversion: Bram de Haan (http://atelierbram.github.io/Base2Tone-prism/output/pr
 Generated with Base16 Builder (https://github.com/base16-builder/base16-builder)
 */
 
+
+
+
+
+
+
+
+
+
+
+
+
+/**
+ * Nord Theme Originally by Arctic Ice Studio
+ * https://nordtheme.com
+ *
+ * Ported for PrismJS by Zane Hitchcoxc
+ */
+
 .dark code[class*="language-"],
 .dark pre[class*="language-"] {
-  @apply .font-mono;
   @apply .text-sm;
-  /* line-height: 1.375; */
-  direction: ltr;
+  @apply .tracking-tight;
+  color: #f8f8f2;
+  background: none;
+  @apply .font-mono;
   text-align: left;
   white-space: pre;
   word-spacing: normal;
   word-break: normal;
-
+  word-wrap: normal;
+  @apply .leading-normal;
   -moz-tab-size: 4;
   -o-tab-size: 4;
   tab-size: 4;
-
   -webkit-hyphens: none;
   -moz-hyphens: none;
   -ms-hyphens: none;
-  hyphens: none;
-  @apply .bg-gray-9;
-  @apply .text-gray-1;
-}
-
-.dark .hidden-when-dark {
-  display: none;
-}
-
-.dark .shown-when-dark {
-  display: inline;
-}
-
-.dark pre[class*="language-"]::-moz-selection, pre[class*="language-"] ::-moz-selection,
-.dark code[class*="language-"]::-moz-selection, code[class*="language-"] ::-moz-selection {
-  text-shadow: none;
-  @apply .bg-blue-7;
-}
-
-.dark pre[class*="language-"]::selection, pre[class*="language-"] ::selection,
-.dark code[class*="language-"]::selection, code[class*="language-"] ::selection {
-  text-shadow: none;
-  @apply .bg-blue-7;
-}
+  hyphens: none; }
 
 /* Code blocks */
 .dark pre[class*="language-"] {
-  padding: 1rem 1.5rem;
-  /* margin: .5em 0; */
+  @apply .p-8;
+  @apply .-ml-8;
+  @apply .-mr-8;
   overflow: auto;
-}
+  @apply .rounded; }
+
+.dark :not(pre) > code[class*="language-"],
+.dark pre[class*="language-"] {
+  background: #2E3440; }
 
 /* Inline code */
 .dark :not(pre) > code[class*="language-"] {
-  padding: .1em;
-  border-radius: .3em;
-}
+   @apply .p-4;
+   @apply .rounded;
+  white-space: normal; }
 
 .dark .token.comment,
 .dark .token.prolog,
 .dark .token.doctype,
 .dark .token.cdata {
-  @apply .text-gray-4;
-}
+  color: #636f88; }
 
 .dark .token.punctuation {
-  @apply .text-gray-4;
-}
+  color: #81A1C1; }
 
-.dark .token.namespace {
-  opacity: .7;
-}
-
-.dark .token.tag,
-.dark .token.operator,
-.dark .token.number {
-  @apply .text-teal-3;
-}
+.dark .namespace {
+  opacity: .7; }
 
 .dark .token.property,
-.dark .token.function {
-  @apply .text-pink-2;
+.dark .token.tag,
+.dark .token.constant,
+.dark .token.symbol,
+.dark .token.deleted {
+  color: #81A1C1; }
+
+.dark .token.number {
+  color: #B48EAD; }
+
+.dark .token.boolean {
+  color: #81A1C1;
 }
 
-.dark .token.tag-id,
 .dark .token.selector,
-.dark .token.atrule-id {
-  @apply .text-blue-1;
-}
-
-.dark code.language-javascript,
-.dark .token.attr-name {
-  @apply .text-blue-3;
-}
-
-.dark code.language-css,
-.dark code.language-scss,
-.dark .token.boolean,
+.dark .token.attr-name,
 .dark .token.string,
+.dark .token.char,
+.dark .token.builtin,
+.dark .token.inserted {
+  color: #A3BE8C; }
+
+.dark .token.operator,
 .dark .token.entity,
 .dark .token.url,
 .dark .language-css .token.string,
-.dark .language-scss .token.string,
 .dark .style .token.string,
-.dark .token.attr-value,
-.dark .token.keyword,
-.dark .token.control,
-.dark .token.directive,
-.dark .token.unit,
-.dark .token.statement,
-.dark .token.regex,
-.dark .token.atrule {
-  @apply .text-yellow-2;
-}
-
-.dark .token.placeholder,
 .dark .token.variable {
-  @apply .text-yellow-1;
-}
+  color: #81A1C1; }
 
-.dark .token.deleted {
-  text-decoration: line-through;
-}
+.dark .token.atrule,
+.dark .token.attr-value,
+.dark .token.function,
+.dark .token.class-name {
+  color: #88C0D0; }
 
-.dark .token.inserted {
-  border-bottom: 1px dotted #E6F6FF; /* blue 0 */
-  text-decoration: none;
-}
+.dark .token.keyword {
+  color: #81A1C1; }
 
-.dark .token.italic {
-  font-style: italic;
-}
+.dark .token.regex,
+.dark .token.important {
+  color: #EBCB8B; }
 
 .dark .token.important,
-.dark .token.bold {
-  font-weight: bold;
-}
+.token.bold {
+  font-weight: bold; }
 
-.dark .token.important {
-  @apply .text-blue-2;
-}
+.dark .token.italic {
+  font-style: italic; }
 
 .dark .token.entity {
-  cursor: help;
+  cursor: help; }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/* .dark pre[class*="language-"] { */
+/*   @apply .shadow-md; */
+/*   @apply .rounded; */
+/* } */
+/* .dark code[class*="language-"], */
+/* .dark pre[class*="language-"] { */
+/*   @apply .font-mono; */
+/*   @apply .text-sm; */
+
+/*   direction: ltr; */
+/*   text-align: left; */
+/*   white-space: pre; */
+/*   word-spacing: normal; */
+/*   word-break: normal; */
+
+/*   -moz-tab-size: 4; */
+/*   -o-tab-size: 4; */
+/*   tab-size: 4; */
+
+/*   -webkit-hyphens: none; */
+/*   -moz-hyphens: none; */
+/*   -ms-hyphens: none; */
+/*   hyphens: none; */
+/*   @apply .bg-nord0; */
+/*   @apply .text-nord4; */
+
+/* } */
+
+.dark .hidden-when-dark {
+display: none;
 }
 
-.dark pre > code.highlight {
-  outline: .4em solid #2186EB; /* blue 4 */
-  outline-offset: .4em;
-}
+.dark .shown-when-dark {
+   display: inline;
+ }
 
-/* overrides color-values for the Line Numbers plugin
- * http://prismjs.com/plugins/line-numbers/
- */
-.dark .line-numbers .line-numbers-rows {
-  border-right-color: #323F4B; /* gray 3 */
-}
+/* .dark pre[class*="language-"]::-moz-selection, pre[class*="language-"] ::-moz-selection, */
+/* .dark code[class*="language-"]::-moz-selection, code[class*="language-"] ::-moz-selection { */
+/*   text-shadow: none; */
+/*   @apply .bg-nord0; */
+/* } */
 
-.dark .line-numbers-rows > span:before {
-  color: #2c3847;
-}
+/* .dark pre[class*="language-"]::selection, pre[class*="language-"] ::selection, */
+/* .dark code[class*="language-"]::selection, code[class*="language-"] ::selection { */
+/*   text-shadow: none; */
+/*   @apply .bg-nord0; */
+/* } */
 
-/* overrides color-values for the Line Highlight plugin
-* http://prismjs.com/plugins/line-highlight/
-*/
-.dark .line-highlight {
-  background: rgba(10, 163, 112, 0.2);
-  background: -webkit-linear-gradient(left, rgba(10, 163, 112, 0.2) 70%, rgba(10, 163, 112, 0));
-  background: linear-gradient(to right, rgba(10, 163, 112, 0.2) 70%, rgba(10, 163, 112, 0));
-}
+
+/* .dark pre[class*="language-"] { */
+/*   padding: 1rem 1.5rem; */
+/*   @apply .-ml-6; */
+/*   @apply .-mr-6; */
+
+/*   overflow: auto; */
+/* } */
+
+/* /\* Inline code *\/ */
+/* .dark :not(pre) > code[class*="language-"] { */
+/*   padding: .1em; */
+/*   border-radius: .3em; */
+/* } */
+
+/* .dark .token.comment, */
+/* .dark .token.prolog, */
+/* .dark .token.doctype, */
+/* .dark .token.cdata { */
+/*   @apply .text-gray-4; */
+/* } */
+
+/* .dark .token.punctuation { */
+/*   @apply .text-gray-4; */
+/* } */
+
+/* .dark .token.namespace { */
+/*   opacity: .7; */
+/* } */
+
+/* .dark .token.tag, */
+/* .dark .token.operator, */
+/* .dark .token.number { */
+/*   @apply .text-teal-3; */
+/* } */
+
+/* .dark .token.property, */
+/* .dark .token.function { */
+/*   @apply .text-pink-2; */
+/* } */
+
+/* .dark .token.tag-id, */
+/* .dark .token.selector, */
+/* .dark .token.atrule-id { */
+/*   @apply .text-blue-1; */
+/* } */
+
+/* .dark code.language-javascript, */
+/* .dark .token.attr-name { */
+/*   @apply .text-blue-3; */
+/* } */
+
+/* .dark code.language-css, */
+/* .dark code.language-scss, */
+/* .dark .token.boolean, */
+/* .dark .token.string, */
+/* .dark .token.entity, */
+/* .dark .token.url, */
+/* .dark .language-css .token.string, */
+/* .dark .language-scss .token.string, */
+/* .dark .style .token.string, */
+/* .dark .token.attr-value, */
+/* .dark .token.keyword, */
+/* .dark .token.control, */
+/* .dark .token.directive, */
+/* .dark .token.unit, */
+/* .dark .token.statement, */
+/* .dark .token.regex, */
+/* .dark .token.atrule { */
+/*   @apply .text-yellow-2; */
+/* } */
+
+/* .dark .token.placeholder, */
+/* .dark .token.variable { */
+/*   @apply .text-yellow-1; */
+/* } */
+
+/* .dark .token.deleted { */
+/*   text-decoration: line-through; */
+/* } */
+
+/* .dark .token.inserted { */
+/*   border-bottom: 1px dotted #E6F6FF;  */
+/*   text-decoration: none; */
+/* } */
+
+/* .dark .token.italic { */
+/*   font-style: italic; */
+/* } */
+
+/* .dark .token.important, */
+/* .dark .token.bold { */
+/*   font-weight: bold; */
+/* } */
+
+/* .dark .token.important { */
+/*   @apply .text-blue-2; */
+/* } */
+
+/* .dark .token.entity { */
+/*   cursor: help; */
+/* } */
+
+/* .dark pre > code.highlight { */
+/*   outline: .4em solid #2186EB; */
+/*   outline-offset: .4em; */
+/* } */
+
+
+/* .dark .line-numbers .line-numbers-rows { */
+/*   border-right-color: #323F4B;  */
+/* } */
+
+/* .dark .line-numbers-rows > span:before { */
+/*   color: #2c3847; */
+/* } */
+
+/* .dark .line-highlight { */
+/*   background: rgba(10, 163, 112, 0.2); */
+/*   background: -webkit-linear-gradient(left, rgba(10, 163, 112, 0.2) 70%, rgba(10, 163, 112, 0)); */
+/*   background: linear-gradient(to right, rgba(10, 163, 112, 0.2) 70%, rgba(10, 163, 112, 0)); */
+/* } */
 
 
 
@@ -611,6 +859,8 @@ code[class*="language-"]::selection, code[class*="language-"] ::selection {
 /* Code blocks */
 pre[class*="language-"] {
   padding: 1rem 1.5rem;
+  @apply .-ml-6;
+  @apply .-mr-6;
   /* margin: .5em 0; */
   overflow: auto;
 }
