--- a/_includes/postslist.njk
+++ b/_includes/postslist.njk
@@ -3,8 +3,8 @@
     <ul reversed class="postlist" style="counter-reset: start-from {{ postslist.length + 1 }}">
     {% for post in postslist | reverse %}
       <li class="mb-6 postlist-item{% if post.url == url %} postlist-item-active{% endif %}">
-        <a href="{{ post.url | url }}" class="[ postlist__link ] font-sans font-bold text-xl mb-0 block postlist-link">{% if post.data.title %}{{ post.data.title }}{% else %}<code>{{ post.url }}</code>{% endif %}</a>
-        <time class="[ postlist__meta ] font-sans text-sm postlist-date" datetime="{{ post.date | htmlDateString }}">{{ post.date | readableDate }}</time>
+        <a href="{{ post.url | url }}" class="[ postlist__link ] font-sans font-bold text-lg mb-0 block postlist-link underline hover:no-underline">{% if post.data.title %}{{ post.data.title }}{% else %}<code>{{ post.url }}</code>{% endif %}</a>
+        <time class="[ postlist__meta ] font-serif italic tracking-tight text-sm postlist-date" datetime="{{ post.date | htmlDateString }}">{{ post.date | readableDate }}</time>
         {% for tag in post.data.tags %}
           {%- if tag != "posts" -%}
           {% set tagUrl %}/tags/{{ tag }}/{% endset %}
