Add new blog post

--- a/_includes/layouts/base.njk
+++ b/_includes/layouts/base.njk
@@ -43,27 +43,27 @@
         <nav class="flex items-center flex-auto text-left">
           <ul class="inline-block w-full">
             <li class="mr-3 inline {% if nav.url == page.url %} underline{% endif %}">
-              <a class="[ site-header__link ] [ font-sans text-sm ]" href="/posts">
+              <a class="[ site-header__link ] [ font-sans text-sm underline hover:no-underline ]" href="/posts">
                 Blog
               </a>
             </li>
             <li class="mr-3 inline {% if nav.url == page.url %} underline{% endif %}">
-              <a class="[ site-header__link ] [ font-sans text-sm ]" href="/assets/aaron-marr-frontend-developer.pdf">
+              <a class="[ site-header__link ] [ font-sans text-sm underline hover:no-underline ]" href="/assets/aaron-marr-frontend-developer.pdf">
                 Download CV
               </a>
             </li>
             <li class="mr-3 inline {% if nav.url == page.url %} underline{% endif %}">
-              <a class="[ site-header__link ] [ font-sans text-sm ]" href="mailto:hello@aaronmarr.co.uk">
+              <a class="[ site-header__link ] [ font-sans text-sm underline hover:no-underline ]" href="mailto:hello@aaronmarr.co.uk">
                 Email Me
               </a>
             </li>
             <li class="mr-3 inline {% if nav.url == page.url %} underline{% endif %}">
-              <a class="[ site-header__link ] [ font-sans text-sm ]" href="https://twitter.com/_aaronmarr">
+              <a class="[ site-header__link ] [ font-sans text-sm underline hover:no-underline ]" href="https://twitter.com/_aaronmarr">
                 Twitter
               </a>
             </li>
             <li class="mr-3 inline {% if nav.url == page.url %} underline{% endif %}">
-              <a class="[ site-header__link ] [ font-sans text-sm ]" href="https://www.linkedin.com/in/aaron-marr-3062a3192/">
+              <a class="[ site-header__link ] [ font-sans text-sm underline hover:no-underline ]" href="https://www.linkedin.com/in/aaron-marr-3062a3192/">
                 LinkedIn
               </a>
             </li>
