--- a/index.njk
+++ b/index.njk
@@ -4,10 +4,23 @@ layout: layouts/home.njk
 <div class="pt-8 pb-8">
   <div class="[ banner ] [ py-2 max-w-xl ]">
     <h2 class="[ banner__headline ] [ font-bold font-serif leading-tight text-2xl md:text-3xl tracking-tight mt-0 mb-2 ]">
-      Front-end Developer
+      Hello, I'm Aaron
     </h2>
+    <p class="[ banner__strapline ] font-sans text-lg leading-snug text-sm mb-4">
+      I'm a Front-End Developer who focuses on modern web and application developmement using JavaScript.
+    </p>
     <p class="[ banner__strapline ] font-sans text-lg leading-snug text-sm">
-      Currently interested in building accessible, user-friendly websites and applications using clean, simple and performant code. Loves React, Functional CSS and Design Systems. Currently learning Laravel and Vue.js.
+      I'm currently looking for a new role as a remote Front-End Developer.
+    </p>
+    <p class="[ banner__strapline ] font-sans text-lg leading-snug text-sm">
+      <a class="border px-4 py-2 mt-4 inline-block" href="mailto:hello@aaronmarr.co.uk">Contact me</a>
     </p>
   </div>
 </div>
+
+
+ 
+
+
+
+ 
