Improve site layout

--- a/archive.njk
+++ b/archive.njk
@@ -7,7 +7,7 @@ permalink: /posts/
 templateClass: template-archive
 ---
 <div class="pt-8 pb-8">
-  <div class="[ banner ] [ py-2 max-w-xl ]">
+  <div class="[ banner ] [ py-2 m-auto px-4 max-w-xl ]">
     <h2 class="[ banner__headline ] [ font-bold font-serif leading-tight text-2xl md:text-3xl tracking-tight mt-0 mb-2 ]">
       Blog
     </h2>
@@ -17,5 +17,7 @@ templateClass: template-archive
   </div>
 </div>
 
-{% set postslist = collections.posts %}
-{% include "postslist.njk" %}
+<div class="max-w-xl px-4 m-auto">
+  {% set postslist = collections.posts %}
+  {% include "postslist.njk" %}
+</div>
